--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <script src='_EmbNODE.js'></script>
+  <script src='EmbNODE.js'></script>
   <body>
 		<script>var ParentPAGE;</script>
     <button id="_button" onclick="Ddd();" style="margin-top:100px;" >Click to create nodes</button>
