--- a/Inhale_xHTML.html
+++ b/Inhale_xHTML.html
@@ -2,7 +2,7 @@
 <html><!-- blow plugin elements to parent  <body onload="parent.ParentPAGE = window;">-->
 	<style>
 		#info {color: GREEN; background: aliceblue;}
-		#themeMENU {position: absolute; z-index: 9; top:0; width:600px; background-color: #f1f1f1; padding: 4px; 
+		#themeMENU {position: absolute; z-index: 9; top:0; width: max-content; background-color: #f1f1f1; padding: 4px; 
 		font-family: 'Open Sans', sans-serif; border: 1px solid #d3d3d3;}
 		#themeMENUheader{ float:left; padding: 1px; z-index: 10; background-color: #000; font-size: 23px; color:white; cursor: move;}
 		#themeMENUlist { float:left; z-index: 10; background-color: #2196F3; color:yellow;}
